Output/slurm-735897.out
  File "/gpfs/mariana/home/akkusu/TBT-practice/TBT_for_VGG.py", line 437
    model.eval()
    ^
IndentationError: expected an indented block after function definition on line 436
